--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1248px;
+    /* width: 1248px; */
     margin-left: auto;
     margin-right: auto;
     padding: 0px 32px;
@@ -9,7 +9,7 @@
   .header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     width: 100%;
     height: 70px;
     box-sizing: border-box;
@@ -26,7 +26,7 @@
     font-family: 'Manrope';
     font-size: 26px;
     line-height: 32px;
-    margin-right: 723px;
+    /* margin-right: 723px; */
     z-index: 99999;
     font-family: 'Manrope';
     font-weight: 500;
