--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,95 +1,15 @@
-.leftAside {
-    float: left;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 327px;
-    margin-right: 30px;
-    padding: 10px 0px 10px 0;
-    box-shadow: 5px 0 5px -5px #888;
-  }
-  
-  .rightAside {
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(18, 20, 23, 0.5);
+    z-index: 99999;
   }
-  
-  .leftTitle {
-    color: rgba(52, 112, 255, 1);
-  
-    font-family: Inter;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0em;
-    margin-bottom: 15px;
-    margin-right: 20px;
-  }
-  
-  .leftUl {
-    height: 1000px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-  }
-  
-  .carCard {
-    width: 274px;
-    height: 308px;
-    list-style: none;
-    background-color: rgb(245, 241, 241);
-    padding: 13px;
-    border-radius: 20px;
-  }
-  
-  .carCard:not(:last-child) {
-    margin-bottom: 30px;
-  }
-  
-  /* RIGHT SIDE */
-  
-  .noItems {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    padding: 50px 0 10px;
-  }
-  
-  .noItemsImage {
-    width: 100px;
-    margin-right: 10px;
-    margin-bottom: 30px;
-  }
-  
-  .nothingText {
-    color: rgba(52, 112, 255, 1);
-  
-    font-family: Inter;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 24px;
-  }
-  
-  .noItemsRight {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 800px;
-    padding: 50px 0 10px;
-  }
-  
-  .noItemsRightImage {
-    width: 500px;
-    margin-right: 10px;
-    margin-bottom: 30px;
-    opacity: 0.8;
-  }
-  
-  /* modal */
   
   .modal {
     display: flex;
@@ -97,17 +17,30 @@
     align-items: flex-start;
     font-family: 'Manrope';
     position: relative;
-    width: 800px;
-    height: 950px;
+    width: 541px;
+    /* height: 752px; */
     border-radius: 12px;
     background-color: rgba(255, 255, 255, 1);
     padding: 40px;
     box-sizing: border-box;
   }
   
+  .closeBtn {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    height: 24px;
+    width: 24px;
+    border-radius: 10px;
+  }
+  
   .carImage {
     width: 100%;
-    height: 470px;
+    height: 248px;
     object-fit: cover;
     border-radius: 14px;
     margin-bottom: 14px;
@@ -115,6 +48,7 @@
   
   .text {
     width: 100%;
+    /* height: 72px; */
   }
   
   .title {
@@ -179,8 +113,7 @@
   }
   
   .rentalConditions {
-    margin-bottom: 24px;
-    height: 100px;
+    margin-bottom: 16px;
   }
   
   .h3 {
@@ -206,15 +139,20 @@
     background-color: rgba(249, 249, 249, 1);
     border-radius: 35px;
     box-sizing: border-box;
+    margin-bottom: 8px;
   }
   
   .conditionsLi:not(:last-child) {
     margin-right: 8px;
   }
   
-  .conditionsLi:nth-child(-n + 2) {
+  /* .conditionsLi:nth-of-type(2) {
+    margin-right: 100px;
+  } */
+  
+  /* .conditionsLi:nth-child(-n + 2) {
     margin-bottom: 8px;
-  }
+  } */
   
   [id='montserrat'] {
     font-family: 'Montserrat';
